--- a/templates/index.html
+++ b/templates/index.html
@@ -388,9 +388,7 @@
       </div>
     {% endif %}
   </div>
-
-  <!-- Bootstrap JS and dependencies -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
