Persist additional loads, add safety factor for additional dead loads and self weight, and fix additional loads error

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
         document.getElementById("steel-options").classList.remove("d-none");
         document.getElementById("concrete-options").classList.add("d-none");
         document.getElementById("effective-length-factors").classList.remove("d-none");
-      } else if(material === "Concrete"){
+      } else if(material === "Concrete" || material === "Timber"){
         document.getElementById("concrete-options").classList.remove("d-none");
         document.getElementById("steel-options").classList.add("d-none");
         document.getElementById("effective-length-factors").classList.add("d-none");
